--- a/assets/style.css
+++ b/assets/style.css
@@ -305,14 +305,19 @@ form .hint_area {
 }
 
 /*------------------ sprites ------------------*/
-.bullets {
-  background: url('bullets.png') no-repeat 0 7px;
-}
 .widgets {
   background: url('widgets.png') no-repeat;
 }
 /*------------------ layout ------------------*/
+body {
+  background: url('bg.png')  repeat-x #f9f9f9;
+}
 #outer_wrapper {
+	min-height:550px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	margin:-280px 0 0 -475px;
 }
 #header,
 #content_wrapper,
@@ -326,8 +331,8 @@ form .hint_area {
 }
 #header {
 	position:relative;
-	height:150px;
-	padding:80px 0 0 0;
+	height:110px;
+	padding:20px 0 0 0;
 }
 #header .logo_wrapper,
 #header .logo,
@@ -361,7 +366,11 @@ form .hint_area {
 }
 #content_wrapper {
 	clear: both;
-	margin:20px auto;
+	margin:0px 120px;
+	width:700px;
+	min-height:300px;
+	background-color:#fff;
+	padding:15px;
 }
 #main {
 	overflow: hidden;
@@ -391,40 +400,44 @@ form .hint_area {
 	/*background: url('main_message_bg.png') repeat left top;*/
 }
 #main .message {
-	padding:10px;
 }
 #footer_wrapper {
 	clear: both;
 }
 #footer {
 	color: #5f5f5f;
+	background: url('footer.png') no-repeat left top;
+	height:125px;
+	width:730px;
+	padding:0;
+	margin:0 auto;
 }
 #footer .footer {
-	margin:0;
+	margin:0 50px 0 50px;
+	width:630px;
 }
 #footer .socials_wrapper {
 	text-align:center;
+	padding:15px 0 0 0;
 }
 #footer .socials span {
-	width:16px;
-	height:16px;
+	width:20px;
+	height:20px;
 	display: block;
 	display: inline-block;
 	margin: 3px 0 0 1px;
 }
-#footer .socials .follow {
-}
 #footer .socials .fb {
-  background-position: 0px 0px;
+  background-position: 0 0;
 }
 #footer .socials .tw {
-	background-position: -16px -0px;
+	background-position: -20px 0 ;
 }
 #footer .socials .yt {
-	background-position: -32px -0px;
+	background-position: -60px 0;
 }
 #footer .socials .gp {
-	background-position: -48px -0px;
+	background-position: -40px 0;
 }
 #footer .copyright {
 	font-size: 0.85em;
@@ -437,6 +450,6 @@ form .hint_area {
 #footer .stats {
 }
 .facebook_like_box {
-	margin:50px 150px 0 150px;
+	margin:50px 0px 0 25px;
 	width:650px;
 }
