--- a/assets/style.css
+++ b/assets/style.css
@@ -314,10 +314,7 @@ body {
 }
 #outer_wrapper {
 	min-height:550px;
-	position:absolute;
-	left:50%;
-	top:50%;
-	margin:-280px 0 0 -475px;
+	margin:30px 0 0 0;
 }
 #header,
 #content_wrapper,
@@ -366,11 +363,11 @@ body {
 }
 #content_wrapper {
 	clear: both;
-	margin:0px 120px;
 	width:700px;
 	min-height:300px;
 	background-color:#fff;
 	padding:15px;
+	border:1px solid #eee;
 }
 #main {
 	overflow: hidden;
