--- a/assets/style.css
+++ b/assets/style.css
@@ -320,9 +320,7 @@ body {
 #content_wrapper,
 #footer
 {
-	width: 950px;
-	margin: 0 auto;
-	padding:0;
+	margin:0 auto;
 }
 #header_wrapper {
 }
@@ -331,43 +329,46 @@ body {
 	height:110px;
 	padding:20px 0 0 0;
 }
-#header .logo_wrapper,
-#header .logo,
-#header .logo_wrapper span{
+.logo_wrapper,
+.logo,
+.logo_wrapper span{
 	display: block;
 	text-align:center;
 }
-#header .logo_wrapper,
-#header .logo {
-  height: 150px;
+.logo_wrapper,
+.logo {
+  height: 100px;
 }
-#header .logo_wrapper {
+.logo_wrapper {
 }
-#header .logo_wrapper a{
+.logo_wrapper a{
 	text-decoration:none;
 }
-#header .logo_wrapper .logo {
+.logo_wrapper .logo {
   background: transparent no-repeat center top;
 }
-#header .site_name {
+.site_name {
 	overflow: hidden;
 	font-size:2.9em;
 	line-height:1em;
 	color:#000;
 	text-transform:uppercase;
 }
-#header .site_slogan {
+.site_slogan {
 	overflow: hidden;
 	font-size:0.9em;
 	color:#666;
 }
 #content_wrapper {
 	clear: both;
-	width:700px;
+	width:670px;
 	min-height:300px;
 	background-color:#fff;
-	padding:15px;
+	padding:30px;
 	border:1px solid #eee;
+	-moz-box-shadow: 0 0 3px 3px #eee;
+	-webkit-box-shadow: 0 0 3px 3px#eee;
+	box-shadow: 0 0 3px 3px #eee;
 }
 #main {
 	overflow: hidden;
@@ -403,19 +404,14 @@ body {
 }
 #footer {
 	color: #5f5f5f;
-	background: url('footer.png') no-repeat left top;
-	height:125px;
-	width:730px;
-	padding:0;
+	padding:20px 0 0 0;
+	border-top:1px solid #eee;
 	margin:0 auto;
 }
 #footer .footer {
-	margin:0 50px 0 50px;
-	width:630px;
 }
 #footer .socials_wrapper {
 	text-align:center;
-	padding:15px 0 0 0;
 }
 #footer .socials span {
 	width:20px;
@@ -447,6 +443,6 @@ body {
 #footer .stats {
 }
 .facebook_like_box {
-	margin:50px 0px 0 25px;
-	width:650px;
+	margin:50px 0px 20px 0px;
+	width:670px;
 }
